package DP.Tries.Factory.PizzaFactory.PizzaFactories;

public class NashikPizzaFactory {

}
