package DP.Tries.Factory.PizzaFactory.Pizzas.Contents;

public enum Herbs_n_Spices {
  BASIL,
  CORIANDER,
  GARLIC,
  OREGANO,
  PEPPAR,
  ROSEMARY,
  MEXICAN_HERBS
}
