package DP.Tries.Factory.PizzaFactory.Pizzas.VegPizzas;

import DP.Tries.Factory.PizzaFactory.Pizzas.Pizza;
import java.util.ArrayList;

public abstract class VegPizza extends Pizza {

  //even though the VegPizza is extending Pizza class still doesn't need to implement the receipe method due to sub classes

  // protected static ArrayList<String> VegContents;

}
