@startuml



abstract class Pizza{
 abstact void receipe()
 void bake()
 void cut()
 void pack()
}
class VegPizza
{

}

class NonVegPizza
{

}
enum NonVegPizzaContent
{
  CHICKEN
  EGG
}
enum Basic
{
   CRUST
    OIL
    WATER
    CHEESE
    SALT
}
enum Herbs_n_Spices
 {
     BASIL
     CORIANDER
     GARLIC
     OREGANO
     PEPPAR
     ROSEMARY
     MEXICAN_HERBS
 }
 enum Nuts
  {
   ALMONDS
    PEANUTS
    PISTACHIOS
    PINE_NUTS
    WALNUTS
  }
  enum Sauces
  {
     CHILI
      TOMOTO
      MOZZARELLA_CHEESE
      FETA
      PARMESAN
      CHEDDAR
      MONTEREY
  }
  enum VegPizzaContents
  {
      CHEESE
      CORN
      MAYONEESE
      MARGHERITA
      CARROTS
      TOMATOS
      MUSHROOMS
      ONIONS
      OLIVES
      BEANS
      PEPPERS
      SPINACH
      BLACK_OLIVES
      CAPSICUM
      GRILLED_MUSHROOM
      JALAPENO
  }

class CheesePizza{
}
class CornPizza{
}
class Margherita
{
}
class Mexican_Green_Wave
{
}
class Veg_Extravaganza
{
}

class ChickenDominator{
}
class Chicken_Fiesta
{
}
class Chicken_Fiesta_Maximus
{
}
class Chicken_Pepperoni
{

}


VegPizza o-- VegContent : contains
NonVegPizza o-- NonVegContent : contains

Pizza <-- VegPizza : extends
Pizza <-- NonVegPizza : extends
NonVegPizza <-- ChickenDominator : extends
NonVegPizza <-- Chicken_Fiesta : extends
NonVegPizza <-- Chicken_Fiesta_Maximus : extends
NonVegPizza <-- Chicken_Pepperoni : extends
VegPizza <-- CornPizza : extends
VegPizza <-- CheesePizza : extends
VegPizza <-- Margherita : extends
VegPizza <-- Mexican_Green_Wave : extends
VegPizza <-- Veg_Extravaganza : extends



class PizzaStore{
 Pizza P
 void orderPizza(String)
}

class Test
{
 public main()
}

class PizzaFactory
{

}
class NagpurPizzaFactory
{
}
class PunePizzaFactory
{
}
class MumbaiPizzaFactory
{
}
class NashikPizzaFactory
{
}


NagpurPizzaFactory -up-> PizzaFactory : extends
PunePizzaFactory -left-> PizzaFactory : extends
MumbaiPizzaFactory -right-> PizzaFactory : extends
NashikPizzaFactory -down-> PizzaFactory : extends

class PizzaStore
{
}
class BardiPizzaStore
{
}
class ShankarNagarPizzaStore
{
}
class ItwariPizzaStore
{
}

BardiPizzaStore --> PizzaStore :extends
ShankarNagarPizzaStore --> PizzaStore :extends
ItwariPizzaStore --> PizzaStore :extends

@enduml